# test-technique-data-engineer

./: .env  Dockerfile  README.md  docker-compose.yml  malware_families.py  populate.py  pyproject.toml
database/: __init__.py  extract.py  fake.py  load.py
database/models/: __init__.py  analysis.py  analyzer.py  malware_family.py  sample.py  tag.py
exercises/: summary.md  task-01.md  task-02.md  task-03.md  task-04.md  task-05.md
tests/: test_database_relationships.py
