[tool.poetry]
name = "de_interview"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "database" },
]

[tool.poetry.dependencies]
python = "^3.10"
pendulum = "^3.0.0"
tqdm = "^4.66.2"
faker = "^24.1.1"
sqlalchemy = "^2.0.28"
pandas = "^2.2.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
